@@ -24,6 +24,10 @@ Template: tzsetup/descriptions/city
 Type: text
 _Description: Select a city in your time zone:
 
+Template: tzsetup/descriptions/state
+Type: text
+_Description: Select the state or province to set your time zone:
+
 # The descriptions in the per-country templates specify the type of
 # prompt that should be displayed; the actual descriptions are in the
 # tzsetup/descriptions/* templates.
@@ -39,14 +43,15 @@ Type: select
 Default: Australia/Canberra
 Choices-C: Australia/Canberra, Australia/Sydney, Australia/Darwin, Australia/Brisbane, Australia/Adelaide, Australia/Hobart, Australia/Perth, Australia/Eucla, Australia/Yancowinna, Australia/Lord_Howe 
 __Choices: Australian Capital Territory, New South Wales, Northern Territory, Queensland, South Australia, Tasmania, Western Australia, Eyre Highway, Yancowinna County, Lord Howe Island
-Description: city
+Description: state
 
 Template: tzsetup/country/BR
 Type: select
 Default: America/Sao_Paulo
-Choices-C: America/Noronha, America/Belem, America/Fortaleza, America/Recife, America/Araguaina, America/Maceio, America/Bahia, America/Sao_Paulo, America/Campo_Grande, America/Cuiaba, America/Santarem, America/Porto_Velho, America/Boa_Vista, America/Manaus, America/Eirunepe, America/Rio_Branco
-__Choices: Fernando de Noronha, Belem, Fortaleza, Recife, Araguaina, Maceio, Bahia, Sao Paulo, Campo Grande, Cuiaba, Santarem, Porto Velho, Boa Vista, Manaus, Eirunepe, Rio Branco
-Description: city
+Choices-C: America/Rio_Branco, America/Maceio, America/Manaus, America/Belem, America/Bahia, America/Fortaleza, America/Sao_Paulo, America/Sao_Paulo, America/Noronha, America/Sao_Paulo, America/Fortaleza, America/Sao_Paulo, America/Campo_Grande, America/Cuiaba, America/Belem, America/Fortaleza, America/Recife, America/Fortaleza, America/Sao_Paulo, America/Sao_Paulo, America/Fortaleza, America/Porto_Velho, America/Boa_Vista, America/Sao_Paulo, America/Sao_Paulo, America/Maceio, America/Sao_Paulo, America/Araguaina
+__Choices: Acre, Alagoas, Amazonas, Amapá, Bahia, Ceará, Distrito Federal, Espírito Santo, Fernando de Noronha, Goiás, Maranhão, Minas Gerais, Mato Grosso do Sul, Mato Grosso, Pará, Paraíba, Pernambuco, Piauí, Paraná, Rio de Janeiro, Rio Grande do Norte, Rondônia, Roraima, Rio Grande do Sul, Santa Catarina, Sergipe, Sâo Paulo, Tocantins
+Description: state
+
 
 Template: tzsetup/country/CA
 Type: select
